--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -87,7 +87,7 @@
                   ></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link px-3" href="#"
+                  <a class="nav-link px-3" href="https://www.linkedin.com/in/shaik-abdul-kabeer-b8a9661a3/"
                     ><i class="fab fa-1x fa-linkedin-in"></i
                   ></a>
                 </li>
@@ -117,12 +117,12 @@
         <div class="row">
           <div class="col-4">
             <h2 class="font-weight-normal mb-3">Find Address :</h2>
-            <p class="mb-1">Lacock, Chippenham SN15 2LG, UK</p>
-            <p class="mb-1">+44 1249 730459,</p>
-            <p class="mb-1">USA</p>
-            <p class="mb-1">Phone:(00) 222 666 444</p>
+            <p class="mb-1">VR Colony, Andhra Pradesh, India</p>
+            <p class="mb-1">+91 6255988484,</p>
+            <p class="mb-1">INDIA</p>
+            <p class="mb-1">Phone:(+91) 222 444 666</p>
             <p class="mb-1">
-              Email:<a href="#" class="text-danger"> hogwartshead@magic.com</a>
+              Email:<a href="mailto:shaikabdulkabeer07@gmail.com" class="text-danger"> hogwartshead@magic.com</a>
             </p>
             <p class="mb-1">
               Follow on:<a href="#" class="text-danger"> Facebook</a>,<a
