--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -87,7 +87,7 @@
                   ></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link px-3" href="https://www.linkedin.com/in/shaik-abdul-kabeer-b8a9661a3/"
+                  <a class="nav-link px-3" href="#"
                     ><i class="fab fa-1x fa-linkedin-in"></i
                   ></a>
                 </li>
@@ -117,12 +117,12 @@
         <div class="row">
           <div class="col-4">
             <h2 class="font-weight-normal mb-3">Find Address :</h2>
-            <p class="mb-1">VR Colony, Andhra Pradesh, India</p>
+            <p class="mb-1">VR Colony, Andhra Pradesh </p>
             <p class="mb-1">+91 6255988484,</p>
             <p class="mb-1">INDIA</p>
             <p class="mb-1">Phone:(+91) 222 444 666</p>
             <p class="mb-1">
-              Email:<a href="mailto:shaikabdulkabeer07@gmail.com" class="text-danger"> hogwartshead@magic.com</a>
+              Email:<a href="#" class="text-danger"> hogwartshead@magic.com</a>
             </p>
             <p class="mb-1">
               Follow on:<a href="#" class="text-danger"> Facebook</a>,<a
@@ -171,7 +171,7 @@
     <div class="comman__footer py-5 text-center">
       <p>
         © All rights reserved | Design by
-        <a href="#" class="text-danger">School Management System</a>
+        <a href="#" class="text-danger">S. Abdul Kabeer</a>
       </p>
     </div>
     <!-- **************************************** Footer End **************************************** -->
