--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -102,7 +102,8 @@
     <!-- **************************************** Contact Details Page Start **************************************** -->
     <div class="contact__page_details">
       <div class="map_container container py-5">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d61421.60607421696!2d78.00478244799041!3d15.811841394236176!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bb5ddf506b7c6c9%3A0x19a7ac74f858d6f2!2sKurnool%2C%20Andhra%20Pradesh!5e0!3m2!1sen!2sin!4v1671431105404!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d61421.60607421696!2d78.00478244799041!3d15.811841394236176!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bb5ddf506b7c6c9%3A0x19a7ac74f858d6f2!2sKurnool%2C%20Andhra%20Pradesh!5e0!3m2!1sen!2sin!4v1671431105404!5m2!1sen!2sin" 
+        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
       <div class="contact_form container" style="margin-top: 15rem">
         <div class="row">
