--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -103,18 +103,18 @@
     <div class="contact__page_details">
       <div class="map_container container py-5">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d61421.60607421696!2d78.00478244799041!3d15.811841394236176!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bb5ddf506b7c6c9%3A0x19a7ac74f858d6f2!2sKurnool%2C%20Andhra%20Pradesh!5e0!3m2!1sen!2sin!4v1671431105404!5m2!1sen!2sin" 
-        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        width="800" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
       <div class="contact_form container" style="margin-top: 15rem">
         <div class="row">
           <div class="col-4">
             <h2 class="font-weight-normal mb-3">Find Address :</h2>
-            <p class="mb-1">Lacock, Chippenham SN15 2LG, UK</p>
-            <p class="mb-1">+44 1249 730459,</p>
-            <p class="mb-1">USA</p>
+            <p class="mb-1">VR Colony, Kurnool, India</p>
+            <p class="mb-1">+91 1249 730459,</p>
+            <p class="mb-1">INDIA</p>
             <p class="mb-1">Phone:(00) 222 666 444</p>
             <p class="mb-1">
-              Email:<a href="#" class="text-danger"> hogwartshead@magic.com</a>
+              Email:<a href="mailto:shaikabdulkabeer07@gmail.com" class="text-danger"> hogwartshead@magic.com</a>
             </p>
             <p class="mb-1">
               Follow on:<a href="#" class="text-danger"> Facebook</a>,<a
@@ -163,7 +163,7 @@
     <div class="comman__footer py-5 text-center">
       <p>
         © All rights reserved | Design by
-        <a href="#" class="text-danger">School Management System</a>
+        <a href="#" class="text-danger">S. Abdul Kabeer</a>
       </p>
     </div>
     <!-- **************************************** Footer End **************************************** -->
