--- a/Pages/about.html
+++ b/Pages/about.html
@@ -199,7 +199,7 @@
     <div class="comman__footer py-5 text-center">
       <p>
         © All rights reserved | Design by
-        <a href="#" class="text-danger">School Management System</a>
+        <a href="#" class="text-danger">S. Abdul Kabeer</a>
       </p>
     </div>
     <!-- **************************************** Footer End **************************************** -->
